; ModuleID = '/home/carl/AnghaBench/linux/sound/sh/extr_aica.c_spu_begin_dma.c'
source_filename = "/home/carl/AnghaBench/linux/sound/sh/extr_aica.c_spu_begin_dma.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_pcm_substream = type { %struct.TYPE_2__*, %struct.snd_pcm_runtime* }
%struct.TYPE_2__ = type { %struct.snd_card_aica* }
%struct.snd_card_aica = type { i32, i32 }
%struct.snd_pcm_runtime = type { i32 }

@jiffies = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_pcm_substream*)* @spu_begin_dma to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @spu_begin_dma(%struct.snd_pcm_substream* %0) #0 {
  %2 = alloca %struct.snd_pcm_substream*, align 8
  %3 = alloca %struct.snd_card_aica*, align 8
  %4 = alloca %struct.snd_pcm_runtime*, align 8
  store %struct.snd_pcm_substream* %0, %struct.snd_pcm_substream** %2, align 8
  %5 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %2, align 8
  %6 = getelementptr inbounds %struct.snd_pcm_substream, %struct.snd_pcm_substream* %5, i32 0, i32 1
  %7 = load %struct.snd_pcm_runtime*, %struct.snd_pcm_runtime** %6, align 8
  store %struct.snd_pcm_runtime* %7, %struct.snd_pcm_runtime** %4, align 8
  %8 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %2, align 8
  %9 = getelementptr inbounds %struct.snd_pcm_substream, %struct.snd_pcm_substream* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load %struct.snd_card_aica*, %struct.snd_card_aica** %11, align 8
  store %struct.snd_card_aica* %12, %struct.snd_card_aica** %3, align 8
  %13 = load %struct.snd_card_aica*, %struct.snd_card_aica** %3, align 8
  %14 = getelementptr inbounds %struct.snd_card_aica, %struct.snd_card_aica* %13, i32 0, i32 1
  %15 = call i32 @schedule_work(i32* %14)
  %16 = load %struct.snd_card_aica*, %struct.snd_card_aica** %3, align 8
  %17 = getelementptr inbounds %struct.snd_card_aica, %struct.snd_card_aica* %16, i32 0, i32 0
  %18 = load i64, i64* @jiffies, align 8
  %19 = add nsw i64 %18, 4
  %20 = call i32 @mod_timer(i32* %17, i64 %19)
  ret void
}

declare dso_local i32 @schedule_work(i32*) #1

declare dso_local i32 @mod_timer(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
